-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

2/3/15
    - Added check to have_fcn() for installation of ipopt_auxdata.m
      when Ipopt >= 3.11.x is detected, to warn about incomplete
      installation and avoid a fatal error.

1/26/15
    - Fixed bug in hasPQcap() that resulted in ignoring generator
      capability curves if Q1MAX < Q2MAX or Q1MIN > Q2MIN (i.e. when
      the sloped portions cut off the left corners of the box
      constraints, rather than the right corners).
      Thanks to Irina Boiarchuk.

1/23/15
    - Added mosek_symbcon() to define symbolic constants for setting
      MOSEK options. Updated MOSEK solver option values in help text
      for mpoption() to correspond to MOSEK v7.

1/22/15
    - Added ability to toggle the availability of optional functionality
      using have_fcn().

1/21/15
    - Fixed minor bug with poly2pwl(), affecting units with Pmax <= 0.
    - Major update to have_fcn(), which now determines and caches
      version numbers and release dates for optional packages, used
      by mpver() and others.
    - Fixed error in qps_mosek() in printout of selected optimizer
      when using MOSEK 7.

1/16/15
    - Cleaned up and improved consistency of output in printpf() for
      generation and dispatchable load constraints.
    - Modified runcpf() to gracefully handle the case when the base
      and target cases are identical (as opposed to getting lost in
      an infinite loop).

1/15/15
    - Fixed bug in handling of interface flow limits, where multipliers
      on binding interface flow limits were off by a factor of the p.u.
      MVA base.
    - Fixed sign error on multipliers on lower bound on constraints