@@ -66,7 +66,7 @@ section_name    = @(s)regexp(s, '/\s*END OF (.*)\s', 'tokens');
 
 %% check for regexp split support
 if ~have_fcn('regexp_split')
-    error('psse_read: Sorry, but PSSE2MPC requires support for the ''split'' argument to regexp(), so it does not work on versions of Octave prior to 3.8.');
+    error('psse_read: Sorry, but PSSE2MPC requires support for the ''split'' argument to regexp(), so it does not work on versions of Matlab prior to 7.3 or Octave prior to 3.8.');
 end
 
 %% read in the file, split on newlines
